// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON output should generate JSON output for a mutation with an enum and an input object variable 1`] = `
"{
	\\"operations\\": [
		{
			\\"filePath\\": \\"GraphQL request\\",
			\\"operationName\\": \\"CreateReview\\",
			\\"operationType\\": \\"mutation\\",
			\\"rootType\\": \\"Mutation\\",
			\\"variables\\": [
				{
					\\"name\\": \\"episode\\",
					\\"type\\": \\"Episode\\"
				},
				{
					\\"name\\": \\"review\\",
					\\"type\\": \\"ReviewInput\\"
				}
			],
			\\"source\\": \\"mutation CreateReview($episode: Episode, $review: ReviewInput) {\\\\n  createReview(episode: $episode, review: $review) {\\\\n    __typename\\\\n    stars\\\\n    commentary\\\\n  }\\\\n}\\",
			\\"fields\\": [
				{
					\\"responseName\\": \\"createReview\\",
					\\"fieldName\\": \\"createReview\\",
					\\"type\\": \\"Review\\",
					\\"args\\": [
						{
							\\"name\\": \\"episode\\",
							\\"value\\": {
								\\"kind\\": \\"Variable\\",
								\\"variableName\\": \\"episode\\"
							},
							\\"type\\": \\"Episode\\"
						},
						{
							\\"name\\": \\"review\\",
							\\"value\\": {
								\\"kind\\": \\"Variable\\",
								\\"variableName\\": \\"review\\"
							},
							\\"type\\": \\"ReviewInput!\\"
						}
					],
					\\"isConditional\\": false,
					\\"isDeprecated\\": false,
					\\"fields\\": [
						{
							\\"responseName\\": \\"__typename\\",
							\\"fieldName\\": \\"__typename\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false
						},
						{
							\\"responseName\\": \\"stars\\",
							\\"fieldName\\": \\"stars\\",
							\\"type\\": \\"Int!\\",
							\\"isConditional\\": false,
							\\"description\\": \\"The number of stars this review gave, 1-5\\",
							\\"isDeprecated\\": false
						},
						{
							\\"responseName\\": \\"commentary\\",
							\\"fieldName\\": \\"commentary\\",
							\\"type\\": \\"String\\",
							\\"isConditional\\": false,
							\\"description\\": \\"Comment about the movie\\",
							\\"isDeprecated\\": false
						}
					],
					\\"fragmentSpreads\\": [],
					\\"inlineFragments\\": []
				}
			],
			\\"fragmentSpreads\\": [],
			\\"inlineFragments\\": [],
			\\"fragmentsReferenced\\": [],
			\\"sourceWithFragments\\": \\"mutation CreateReview($episode: Episode, $review: ReviewInput) {\\\\n  createReview(episode: $episode, review: $review) {\\\\n    __typename\\\\n    stars\\\\n    commentary\\\\n  }\\\\n}\\",
			\\"operationId\\": \\"0ce790562a5f5a8afc1e0d002d0436768d7649e4ec8b4aa816d3849f66768c7e\\"
		}
	],
	\\"fragments\\": [],
	\\"typesUsed\\": [
		{
			\\"kind\\": \\"EnumType\\",
			\\"name\\": \\"Episode\\",
			\\"description\\": \\"The episodes in the Star Wars trilogy\\",
			\\"values\\": [
				{
					\\"name\\": \\"NEWHOPE\\",
					\\"description\\": \\"Star Wars Episode IV: A New Hope, released in 1977.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				},
				{
					\\"name\\": \\"EMPIRE\\",
					\\"description\\": \\"Star Wars Episode V: The Empire Strikes Back, released in 1980.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				},
				{
					\\"name\\": \\"JEDI\\",
					\\"description\\": \\"Star Wars Episode VI: Return of the Jedi, released in 1983.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				}
			]
		},
		{
			\\"kind\\": \\"InputObjectType\\",
			\\"name\\": \\"ReviewInput\\",
			\\"description\\": \\"The input object sent when someone is creating a new review\\",
			\\"fields\\": [
				{
					\\"name\\": \\"stars\\",
					\\"type\\": \\"Int!\\",
					\\"description\\": \\"0-5 stars\\"
				},
				{
					\\"name\\": \\"commentary\\",
					\\"type\\": \\"String\\",
					\\"description\\": \\"Comment about the movie, optional\\"
				},
				{
					\\"name\\": \\"favorite_color\\",
					\\"type\\": \\"ColorInput\\",
					\\"description\\": \\"Favorite color, optional\\"
				}
			]
		},
		{
			\\"kind\\": \\"InputObjectType\\",
			\\"name\\": \\"ColorInput\\",
			\\"description\\": \\"The input object sent when passing in a color\\",
			\\"fields\\": [
				{
					\\"name\\": \\"red\\",
					\\"type\\": \\"Int!\\",
					\\"description\\": \\"\\"
				},
				{
					\\"name\\": \\"green\\",
					\\"type\\": \\"Int!\\",
					\\"description\\": \\"\\"
				},
				{
					\\"name\\": \\"blue\\",
					\\"type\\": \\"Int!\\",
					\\"description\\": \\"\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Review\\",
			\\"description\\": \\"Represents a review for a movie\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"stars\\",
					\\"type\\": \\"Int!\\",
					\\"description\\": \\"The number of stars this review gave, 1-5\\"
				},
				{
					\\"name\\": \\"commentary\\",
					\\"type\\": \\"String\\",
					\\"description\\": \\"Comment about the movie\\"
				}
			]
		}
	]
}"
`;

exports[`JSON output should generate JSON output for a query with a fragment spread and nested inline fragments 1`] = `
"{
	\\"operations\\": [
		{
			\\"filePath\\": \\"GraphQL request\\",
			\\"operationName\\": \\"HeroAndDetails\\",
			\\"operationType\\": \\"query\\",
			\\"rootType\\": \\"Query\\",
			\\"variables\\": [],
			\\"source\\": \\"query HeroAndDetails {\\\\n  hero {\\\\n    __typename\\\\n    id\\\\n    ...CharacterDetails\\\\n  }\\\\n}\\",
			\\"fields\\": [
				{
					\\"responseName\\": \\"hero\\",
					\\"fieldName\\": \\"hero\\",
					\\"type\\": \\"Character\\",
					\\"isConditional\\": false,
					\\"isDeprecated\\": false,
					\\"fields\\": [
						{
							\\"responseName\\": \\"__typename\\",
							\\"fieldName\\": \\"__typename\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false
						},
						{
							\\"responseName\\": \\"id\\",
							\\"fieldName\\": \\"id\\",
							\\"type\\": \\"ID!\\",
							\\"isConditional\\": false,
							\\"description\\": \\"The ID of the character\\",
							\\"isDeprecated\\": false
						}
					],
					\\"fragmentSpreads\\": [
						\\"CharacterDetails\\"
					],
					\\"inlineFragments\\": []
				}
			],
			\\"fragmentSpreads\\": [],
			\\"inlineFragments\\": [],
			\\"fragmentsReferenced\\": [
				\\"CharacterDetails\\"
			],
			\\"sourceWithFragments\\": \\"query HeroAndDetails {\\\\n  hero {\\\\n    __typename\\\\n    id\\\\n    ...CharacterDetails\\\\n  }\\\\n}\\\\nfragment CharacterDetails on Character {\\\\n  __typename\\\\n  name\\\\n  ... on Droid {\\\\n    primaryFunction\\\\n  }\\\\n  ... on Human {\\\\n    height\\\\n  }\\\\n}\\",
			\\"operationId\\": \\"9ea2d583a2bcf98ddcedc95a807e34011ff3c0f66fabaf01fa0169e4a4159121\\"
		}
	],
	\\"fragments\\": [
		{
			\\"typeCondition\\": \\"Character\\",
			\\"possibleTypes\\": [
				\\"Human\\",
				\\"Droid\\"
			],
			\\"fragmentName\\": \\"CharacterDetails\\",
			\\"filePath\\": \\"GraphQL request\\",
			\\"source\\": \\"fragment CharacterDetails on Character {\\\\n  __typename\\\\n  name\\\\n  ... on Droid {\\\\n    primaryFunction\\\\n  }\\\\n  ... on Human {\\\\n    height\\\\n  }\\\\n}\\",
			\\"fields\\": [
				{
					\\"responseName\\": \\"__typename\\",
					\\"fieldName\\": \\"__typename\\",
					\\"type\\": \\"String!\\",
					\\"isConditional\\": false
				},
				{
					\\"responseName\\": \\"name\\",
					\\"fieldName\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"isConditional\\": false,
					\\"description\\": \\"The name of the character\\",
					\\"isDeprecated\\": false
				}
			],
			\\"fragmentSpreads\\": [],
			\\"inlineFragments\\": [
				{
					\\"typeCondition\\": \\"Droid\\",
					\\"possibleTypes\\": [
						\\"Droid\\"
					],
					\\"fields\\": [
						{
							\\"responseName\\": \\"__typename\\",
							\\"fieldName\\": \\"__typename\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false
						},
						{
							\\"responseName\\": \\"name\\",
							\\"fieldName\\": \\"name\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false,
							\\"description\\": \\"What others call this droid\\",
							\\"isDeprecated\\": false
						},
						{
							\\"responseName\\": \\"primaryFunction\\",
							\\"fieldName\\": \\"primaryFunction\\",
							\\"type\\": \\"String\\",
							\\"isConditional\\": false,
							\\"description\\": \\"This droid's primary function\\",
							\\"isDeprecated\\": false
						}
					],
					\\"fragmentSpreads\\": []
				},
				{
					\\"typeCondition\\": \\"Human\\",
					\\"possibleTypes\\": [
						\\"Human\\"
					],
					\\"fields\\": [
						{
							\\"responseName\\": \\"__typename\\",
							\\"fieldName\\": \\"__typename\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false
						},
						{
							\\"responseName\\": \\"name\\",
							\\"fieldName\\": \\"name\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false,
							\\"description\\": \\"What this human calls themselves\\",
							\\"isDeprecated\\": false
						},
						{
							\\"responseName\\": \\"height\\",
							\\"fieldName\\": \\"height\\",
							\\"type\\": \\"Float\\",
							\\"isConditional\\": false,
							\\"description\\": \\"Height in the preferred unit, default is meters\\",
							\\"isDeprecated\\": false
						}
					],
					\\"fragmentSpreads\\": []
				}
			]
		}
	],
	\\"typesUsed\\": [
		{
			\\"kind\\": \\"InterfaceType\\",
			\\"name\\": \\"Character\\",
			\\"description\\": \\"A character from the Star Wars universe\\",
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the character\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"The name of the character\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"The friends of the character, or an empty list if they have none\\"
				},
				{
					\\"name\\": \\"friendsConnection\\",
					\\"type\\": \\"FriendsConnection!\\",
					\\"description\\": \\"The friends of the character exposed as a connection with edges\\"
				},
				{
					\\"name\\": \\"appearsIn\\",
					\\"type\\": \\"[Episode]!\\",
					\\"description\\": \\"The movies this character appears in\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Human\\",
			\\"description\\": \\"A humanoid creature from the Star Wars universe\\",
			\\"ifaces\\": [
				{
					\\"name\\": \\"Character\\",
					\\"description\\": \\"A character from the Star Wars universe\\"
				}
			],
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the human\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"What this human calls themselves\\"
				},
				{
					\\"name\\": \\"homePlanet\\",
					\\"type\\": \\"String\\",
					\\"description\\": \\"The home planet of the human, or null if unknown\\"
				},
				{
					\\"name\\": \\"height\\",
					\\"type\\": \\"Float\\",
					\\"description\\": \\"Height in the preferred unit, default is meters\\"
				},
				{
					\\"name\\": \\"mass\\",
					\\"type\\": \\"Float\\",
					\\"description\\": \\"Mass in kilograms, or null if unknown\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"This human's friends, or an empty list if they have none\\"
				},
				{
					\\"name\\": \\"friendsConnection\\",
					\\"type\\": \\"FriendsConnection!\\",
					\\"description\\": \\"The friends of the human exposed as a connection with edges\\"
				},
				{
					\\"name\\": \\"appearsIn\\",
					\\"type\\": \\"[Episode]!\\",
					\\"description\\": \\"The movies this human appears in\\"
				},
				{
					\\"name\\": \\"starships\\",
					\\"type\\": \\"[Starship]\\",
					\\"description\\": \\"A list of starships this person has piloted, or an empty list if none\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"FriendsConnection\\",
			\\"description\\": \\"A connection object for a character's friends\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"totalCount\\",
					\\"type\\": \\"Int\\",
					\\"description\\": \\"The total number of friends\\"
				},
				{
					\\"name\\": \\"edges\\",
					\\"type\\": \\"[FriendsEdge]\\",
					\\"description\\": \\"The edges for each of the character's friends.\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"A list of the friends, as a convenience when edges are not needed.\\"
				},
				{
					\\"name\\": \\"pageInfo\\",
					\\"type\\": \\"PageInfo!\\",
					\\"description\\": \\"Information for paginating this connection\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"FriendsEdge\\",
			\\"description\\": \\"An edge object for a character's friends\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"cursor\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"A cursor used for pagination\\"
				},
				{
					\\"name\\": \\"node\\",
					\\"type\\": \\"Character\\",
					\\"description\\": \\"The character represented by this friendship edge\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"PageInfo\\",
			\\"description\\": \\"Information for paginating this connection\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"startCursor\\",
					\\"type\\": \\"ID\\",
					\\"description\\": \\"\\"
				},
				{
					\\"name\\": \\"endCursor\\",
					\\"type\\": \\"ID\\",
					\\"description\\": \\"\\"
				},
				{
					\\"name\\": \\"hasNextPage\\",
					\\"type\\": \\"Boolean!\\",
					\\"description\\": \\"\\"
				}
			]
		},
		{
			\\"kind\\": \\"EnumType\\",
			\\"name\\": \\"Episode\\",
			\\"description\\": \\"The episodes in the Star Wars trilogy\\",
			\\"values\\": [
				{
					\\"name\\": \\"NEWHOPE\\",
					\\"description\\": \\"Star Wars Episode IV: A New Hope, released in 1977.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				},
				{
					\\"name\\": \\"EMPIRE\\",
					\\"description\\": \\"Star Wars Episode V: The Empire Strikes Back, released in 1980.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				},
				{
					\\"name\\": \\"JEDI\\",
					\\"description\\": \\"Star Wars Episode VI: Return of the Jedi, released in 1983.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Starship\\",
			\\"description\\": \\"\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the starship\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"The name of the starship\\"
				},
				{
					\\"name\\": \\"length\\",
					\\"type\\": \\"Float\\",
					\\"description\\": \\"Length of the starship, along the longest axis\\"
				},
				{
					\\"name\\": \\"coordinates\\",
					\\"type\\": \\"[[Float!]!]\\",
					\\"description\\": \\"\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Droid\\",
			\\"description\\": \\"An autonomous mechanical character in the Star Wars universe\\",
			\\"ifaces\\": [
				{
					\\"name\\": \\"Character\\",
					\\"description\\": \\"A character from the Star Wars universe\\"
				}
			],
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the droid\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"What others call this droid\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"This droid's friends, or an empty list if they have none\\"
				},
				{
					\\"name\\": \\"friendsConnection\\",
					\\"type\\": \\"FriendsConnection!\\",
					\\"description\\": \\"The friends of the droid exposed as a connection with edges\\"
				},
				{
					\\"name\\": \\"appearsIn\\",
					\\"type\\": \\"[Episode]!\\",
					\\"description\\": \\"The movies this droid appears in\\"
				},
				{
					\\"name\\": \\"primaryFunction\\",
					\\"type\\": \\"String\\",
					\\"description\\": \\"This droid's primary function\\"
				}
			]
		}
	]
}"
`;

exports[`JSON output should generate JSON output for a query with a nested selection set 1`] = `
"{
	\\"operations\\": [
		{
			\\"filePath\\": \\"GraphQL request\\",
			\\"operationName\\": \\"HeroAndFriendsNames\\",
			\\"operationType\\": \\"query\\",
			\\"rootType\\": \\"Query\\",
			\\"variables\\": [],
			\\"source\\": \\"query HeroAndFriendsNames {\\\\n  hero {\\\\n    __typename\\\\n    name\\\\n    friends {\\\\n      __typename\\\\n      name\\\\n    }\\\\n  }\\\\n}\\",
			\\"fields\\": [
				{
					\\"responseName\\": \\"hero\\",
					\\"fieldName\\": \\"hero\\",
					\\"type\\": \\"Character\\",
					\\"isConditional\\": false,
					\\"isDeprecated\\": false,
					\\"fields\\": [
						{
							\\"responseName\\": \\"__typename\\",
							\\"fieldName\\": \\"__typename\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false
						},
						{
							\\"responseName\\": \\"name\\",
							\\"fieldName\\": \\"name\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false,
							\\"description\\": \\"The name of the character\\",
							\\"isDeprecated\\": false
						},
						{
							\\"responseName\\": \\"friends\\",
							\\"fieldName\\": \\"friends\\",
							\\"type\\": \\"[Character]\\",
							\\"isConditional\\": false,
							\\"description\\": \\"The friends of the character, or an empty list if they have none\\",
							\\"isDeprecated\\": false,
							\\"fields\\": [
								{
									\\"responseName\\": \\"__typename\\",
									\\"fieldName\\": \\"__typename\\",
									\\"type\\": \\"String!\\",
									\\"isConditional\\": false
								},
								{
									\\"responseName\\": \\"name\\",
									\\"fieldName\\": \\"name\\",
									\\"type\\": \\"String!\\",
									\\"isConditional\\": false,
									\\"description\\": \\"The name of the character\\",
									\\"isDeprecated\\": false
								}
							],
							\\"fragmentSpreads\\": [],
							\\"inlineFragments\\": []
						}
					],
					\\"fragmentSpreads\\": [],
					\\"inlineFragments\\": []
				}
			],
			\\"fragmentSpreads\\": [],
			\\"inlineFragments\\": [],
			\\"fragmentsReferenced\\": [],
			\\"sourceWithFragments\\": \\"query HeroAndFriendsNames {\\\\n  hero {\\\\n    __typename\\\\n    name\\\\n    friends {\\\\n      __typename\\\\n      name\\\\n    }\\\\n  }\\\\n}\\",
			\\"operationId\\": \\"d424c7c31d5147b382972b3c316ace3d51f2f039b53852a280d707df2848f715\\"
		}
	],
	\\"fragments\\": [],
	\\"typesUsed\\": [
		{
			\\"kind\\": \\"InterfaceType\\",
			\\"name\\": \\"Character\\",
			\\"description\\": \\"A character from the Star Wars universe\\",
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the character\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"The name of the character\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"The friends of the character, or an empty list if they have none\\"
				},
				{
					\\"name\\": \\"friendsConnection\\",
					\\"type\\": \\"FriendsConnection!\\",
					\\"description\\": \\"The friends of the character exposed as a connection with edges\\"
				},
				{
					\\"name\\": \\"appearsIn\\",
					\\"type\\": \\"[Episode]!\\",
					\\"description\\": \\"The movies this character appears in\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Human\\",
			\\"description\\": \\"A humanoid creature from the Star Wars universe\\",
			\\"ifaces\\": [
				{
					\\"name\\": \\"Character\\",
					\\"description\\": \\"A character from the Star Wars universe\\"
				}
			],
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the human\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"What this human calls themselves\\"
				},
				{
					\\"name\\": \\"homePlanet\\",
					\\"type\\": \\"String\\",
					\\"description\\": \\"The home planet of the human, or null if unknown\\"
				},
				{
					\\"name\\": \\"height\\",
					\\"type\\": \\"Float\\",
					\\"description\\": \\"Height in the preferred unit, default is meters\\"
				},
				{
					\\"name\\": \\"mass\\",
					\\"type\\": \\"Float\\",
					\\"description\\": \\"Mass in kilograms, or null if unknown\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"This human's friends, or an empty list if they have none\\"
				},
				{
					\\"name\\": \\"friendsConnection\\",
					\\"type\\": \\"FriendsConnection!\\",
					\\"description\\": \\"The friends of the human exposed as a connection with edges\\"
				},
				{
					\\"name\\": \\"appearsIn\\",
					\\"type\\": \\"[Episode]!\\",
					\\"description\\": \\"The movies this human appears in\\"
				},
				{
					\\"name\\": \\"starships\\",
					\\"type\\": \\"[Starship]\\",
					\\"description\\": \\"A list of starships this person has piloted, or an empty list if none\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"FriendsConnection\\",
			\\"description\\": \\"A connection object for a character's friends\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"totalCount\\",
					\\"type\\": \\"Int\\",
					\\"description\\": \\"The total number of friends\\"
				},
				{
					\\"name\\": \\"edges\\",
					\\"type\\": \\"[FriendsEdge]\\",
					\\"description\\": \\"The edges for each of the character's friends.\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"A list of the friends, as a convenience when edges are not needed.\\"
				},
				{
					\\"name\\": \\"pageInfo\\",
					\\"type\\": \\"PageInfo!\\",
					\\"description\\": \\"Information for paginating this connection\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"FriendsEdge\\",
			\\"description\\": \\"An edge object for a character's friends\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"cursor\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"A cursor used for pagination\\"
				},
				{
					\\"name\\": \\"node\\",
					\\"type\\": \\"Character\\",
					\\"description\\": \\"The character represented by this friendship edge\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"PageInfo\\",
			\\"description\\": \\"Information for paginating this connection\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"startCursor\\",
					\\"type\\": \\"ID\\",
					\\"description\\": \\"\\"
				},
				{
					\\"name\\": \\"endCursor\\",
					\\"type\\": \\"ID\\",
					\\"description\\": \\"\\"
				},
				{
					\\"name\\": \\"hasNextPage\\",
					\\"type\\": \\"Boolean!\\",
					\\"description\\": \\"\\"
				}
			]
		},
		{
			\\"kind\\": \\"EnumType\\",
			\\"name\\": \\"Episode\\",
			\\"description\\": \\"The episodes in the Star Wars trilogy\\",
			\\"values\\": [
				{
					\\"name\\": \\"NEWHOPE\\",
					\\"description\\": \\"Star Wars Episode IV: A New Hope, released in 1977.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				},
				{
					\\"name\\": \\"EMPIRE\\",
					\\"description\\": \\"Star Wars Episode V: The Empire Strikes Back, released in 1980.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				},
				{
					\\"name\\": \\"JEDI\\",
					\\"description\\": \\"Star Wars Episode VI: Return of the Jedi, released in 1983.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Starship\\",
			\\"description\\": \\"\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the starship\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"The name of the starship\\"
				},
				{
					\\"name\\": \\"length\\",
					\\"type\\": \\"Float\\",
					\\"description\\": \\"Length of the starship, along the longest axis\\"
				},
				{
					\\"name\\": \\"coordinates\\",
					\\"type\\": \\"[[Float!]!]\\",
					\\"description\\": \\"\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Droid\\",
			\\"description\\": \\"An autonomous mechanical character in the Star Wars universe\\",
			\\"ifaces\\": [
				{
					\\"name\\": \\"Character\\",
					\\"description\\": \\"A character from the Star Wars universe\\"
				}
			],
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the droid\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"What others call this droid\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"This droid's friends, or an empty list if they have none\\"
				},
				{
					\\"name\\": \\"friendsConnection\\",
					\\"type\\": \\"FriendsConnection!\\",
					\\"description\\": \\"The friends of the droid exposed as a connection with edges\\"
				},
				{
					\\"name\\": \\"appearsIn\\",
					\\"type\\": \\"[Episode]!\\",
					\\"description\\": \\"The movies this droid appears in\\"
				},
				{
					\\"name\\": \\"primaryFunction\\",
					\\"type\\": \\"String\\",
					\\"description\\": \\"This droid's primary function\\"
				}
			]
		}
	]
}"
`;

exports[`JSON output should generate JSON output for a query with an enum variable 1`] = `
"{
	\\"operations\\": [
		{
			\\"filePath\\": \\"GraphQL request\\",
			\\"operationName\\": \\"HeroName\\",
			\\"operationType\\": \\"query\\",
			\\"rootType\\": \\"Query\\",
			\\"variables\\": [
				{
					\\"name\\": \\"episode\\",
					\\"type\\": \\"Episode\\"
				}
			],
			\\"source\\": \\"query HeroName($episode: Episode) {\\\\n  hero(episode: $episode) {\\\\n    __typename\\\\n    name\\\\n  }\\\\n}\\",
			\\"fields\\": [
				{
					\\"responseName\\": \\"hero\\",
					\\"fieldName\\": \\"hero\\",
					\\"type\\": \\"Character\\",
					\\"args\\": [
						{
							\\"name\\": \\"episode\\",
							\\"value\\": {
								\\"kind\\": \\"Variable\\",
								\\"variableName\\": \\"episode\\"
							},
							\\"type\\": \\"Episode\\"
						}
					],
					\\"isConditional\\": false,
					\\"isDeprecated\\": false,
					\\"fields\\": [
						{
							\\"responseName\\": \\"__typename\\",
							\\"fieldName\\": \\"__typename\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false
						},
						{
							\\"responseName\\": \\"name\\",
							\\"fieldName\\": \\"name\\",
							\\"type\\": \\"String!\\",
							\\"isConditional\\": false,
							\\"description\\": \\"The name of the character\\",
							\\"isDeprecated\\": false
						}
					],
					\\"fragmentSpreads\\": [],
					\\"inlineFragments\\": []
				}
			],
			\\"fragmentSpreads\\": [],
			\\"inlineFragments\\": [],
			\\"fragmentsReferenced\\": [],
			\\"sourceWithFragments\\": \\"query HeroName($episode: Episode) {\\\\n  hero(episode: $episode) {\\\\n    __typename\\\\n    name\\\\n  }\\\\n}\\",
			\\"operationId\\": \\"f6e76545cd03aa21368d9969cb39447f6e836a16717823281803778e7805d671\\"
		}
	],
	\\"fragments\\": [],
	\\"typesUsed\\": [
		{
			\\"kind\\": \\"EnumType\\",
			\\"name\\": \\"Episode\\",
			\\"description\\": \\"The episodes in the Star Wars trilogy\\",
			\\"values\\": [
				{
					\\"name\\": \\"NEWHOPE\\",
					\\"description\\": \\"Star Wars Episode IV: A New Hope, released in 1977.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				},
				{
					\\"name\\": \\"EMPIRE\\",
					\\"description\\": \\"Star Wars Episode V: The Empire Strikes Back, released in 1980.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				},
				{
					\\"name\\": \\"JEDI\\",
					\\"description\\": \\"Star Wars Episode VI: Return of the Jedi, released in 1983.\\",
					\\"isDeprecated\\": false,
					\\"deprecationReason\\": null
				}
			]
		},
		{
			\\"kind\\": \\"InterfaceType\\",
			\\"name\\": \\"Character\\",
			\\"description\\": \\"A character from the Star Wars universe\\",
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the character\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"The name of the character\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"The friends of the character, or an empty list if they have none\\"
				},
				{
					\\"name\\": \\"friendsConnection\\",
					\\"type\\": \\"FriendsConnection!\\",
					\\"description\\": \\"The friends of the character exposed as a connection with edges\\"
				},
				{
					\\"name\\": \\"appearsIn\\",
					\\"type\\": \\"[Episode]!\\",
					\\"description\\": \\"The movies this character appears in\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Human\\",
			\\"description\\": \\"A humanoid creature from the Star Wars universe\\",
			\\"ifaces\\": [
				{
					\\"name\\": \\"Character\\",
					\\"description\\": \\"A character from the Star Wars universe\\"
				}
			],
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the human\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"What this human calls themselves\\"
				},
				{
					\\"name\\": \\"homePlanet\\",
					\\"type\\": \\"String\\",
					\\"description\\": \\"The home planet of the human, or null if unknown\\"
				},
				{
					\\"name\\": \\"height\\",
					\\"type\\": \\"Float\\",
					\\"description\\": \\"Height in the preferred unit, default is meters\\"
				},
				{
					\\"name\\": \\"mass\\",
					\\"type\\": \\"Float\\",
					\\"description\\": \\"Mass in kilograms, or null if unknown\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"This human's friends, or an empty list if they have none\\"
				},
				{
					\\"name\\": \\"friendsConnection\\",
					\\"type\\": \\"FriendsConnection!\\",
					\\"description\\": \\"The friends of the human exposed as a connection with edges\\"
				},
				{
					\\"name\\": \\"appearsIn\\",
					\\"type\\": \\"[Episode]!\\",
					\\"description\\": \\"The movies this human appears in\\"
				},
				{
					\\"name\\": \\"starships\\",
					\\"type\\": \\"[Starship]\\",
					\\"description\\": \\"A list of starships this person has piloted, or an empty list if none\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"FriendsConnection\\",
			\\"description\\": \\"A connection object for a character's friends\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"totalCount\\",
					\\"type\\": \\"Int\\",
					\\"description\\": \\"The total number of friends\\"
				},
				{
					\\"name\\": \\"edges\\",
					\\"type\\": \\"[FriendsEdge]\\",
					\\"description\\": \\"The edges for each of the character's friends.\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"A list of the friends, as a convenience when edges are not needed.\\"
				},
				{
					\\"name\\": \\"pageInfo\\",
					\\"type\\": \\"PageInfo!\\",
					\\"description\\": \\"Information for paginating this connection\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"FriendsEdge\\",
			\\"description\\": \\"An edge object for a character's friends\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"cursor\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"A cursor used for pagination\\"
				},
				{
					\\"name\\": \\"node\\",
					\\"type\\": \\"Character\\",
					\\"description\\": \\"The character represented by this friendship edge\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"PageInfo\\",
			\\"description\\": \\"Information for paginating this connection\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"startCursor\\",
					\\"type\\": \\"ID\\",
					\\"description\\": \\"\\"
				},
				{
					\\"name\\": \\"endCursor\\",
					\\"type\\": \\"ID\\",
					\\"description\\": \\"\\"
				},
				{
					\\"name\\": \\"hasNextPage\\",
					\\"type\\": \\"Boolean!\\",
					\\"description\\": \\"\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Starship\\",
			\\"description\\": \\"\\",
			\\"ifaces\\": [],
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the starship\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"The name of the starship\\"
				},
				{
					\\"name\\": \\"length\\",
					\\"type\\": \\"Float\\",
					\\"description\\": \\"Length of the starship, along the longest axis\\"
				},
				{
					\\"name\\": \\"coordinates\\",
					\\"type\\": \\"[[Float!]!]\\",
					\\"description\\": \\"\\"
				}
			]
		},
		{
			\\"kind\\": \\"ObjectType\\",
			\\"name\\": \\"Droid\\",
			\\"description\\": \\"An autonomous mechanical character in the Star Wars universe\\",
			\\"ifaces\\": [
				{
					\\"name\\": \\"Character\\",
					\\"description\\": \\"A character from the Star Wars universe\\"
				}
			],
			\\"fields\\": [
				{
					\\"name\\": \\"id\\",
					\\"type\\": \\"ID!\\",
					\\"description\\": \\"The ID of the droid\\"
				},
				{
					\\"name\\": \\"name\\",
					\\"type\\": \\"String!\\",
					\\"description\\": \\"What others call this droid\\"
				},
				{
					\\"name\\": \\"friends\\",
					\\"type\\": \\"[Character]\\",
					\\"description\\": \\"This droid's friends, or an empty list if they have none\\"
				},
				{
					\\"name\\": \\"friendsConnection\\",
					\\"type\\": \\"FriendsConnection!\\",
					\\"description\\": \\"The friends of the droid exposed as a connection with edges\\"
				},
				{
					\\"name\\": \\"appearsIn\\",
					\\"type\\": \\"[Episode]!\\",
					\\"description\\": \\"The movies this droid appears in\\"
				},
				{
					\\"name\\": \\"primaryFunction\\",
					\\"type\\": \\"String\\",
					\\"description\\": \\"This droid's primary function\\"
				}
			]
		}
	]
}"
`;

exports[`JSON output should generate JSON output for an input object type with default field values 1`] = `
"{
	\\"operations\\": [
		{
			\\"filePath\\": \\"GraphQL request\\",
			\\"operationName\\": \\"QueryWithComplexInput\\",
			\\"operationType\\": \\"query\\",
			\\"rootType\\": \\"Query\\",
			\\"variables\\": [
				{
					\\"name\\": \\"input\\",
					\\"type\\": \\"ComplexInput\\"
				}
			],
			\\"source\\": \\"query QueryWithComplexInput($input: ComplexInput) {\\\\n  someField(input: $input)\\\\n}\\",
			\\"fields\\": [
				{
					\\"responseName\\": \\"someField\\",
					\\"fieldName\\": \\"someField\\",
					\\"type\\": \\"String!\\",
					\\"args\\": [
						{
							\\"name\\": \\"input\\",
							\\"value\\": {
								\\"kind\\": \\"Variable\\",
								\\"variableName\\": \\"input\\"
							},
							\\"type\\": \\"ComplexInput!\\"
						}
					],
					\\"isConditional\\": false,
					\\"isDeprecated\\": false
				}
			],
			\\"fragmentSpreads\\": [],
			\\"inlineFragments\\": [],
			\\"fragmentsReferenced\\": [],
			\\"sourceWithFragments\\": \\"query QueryWithComplexInput($input: ComplexInput) {\\\\n  someField(input: $input)\\\\n}\\",
			\\"operationId\\": \\"55e208ec5def01b99b65c64b666d06e95558a6e455c52eb5c2307c4775afb805\\"
		}
	],
	\\"fragments\\": [],
	\\"typesUsed\\": [
		{
			\\"kind\\": \\"InputObjectType\\",
			\\"name\\": \\"ComplexInput\\",
			\\"fields\\": [
				{
					\\"name\\": \\"string\\",
					\\"type\\": \\"String\\",
					\\"defaultValue\\": \\"Hello\\"
				},
				{
					\\"name\\": \\"customScalar\\",
					\\"type\\": \\"Date\\",
					\\"defaultValue\\": \\"2017-04-16\\"
				},
				{
					\\"name\\": \\"listOfString\\",
					\\"type\\": \\"[String]\\",
					\\"defaultValue\\": [
						\\"test1\\",
						\\"test2\\",
						\\"test3\\"
					]
				},
				{
					\\"name\\": \\"listOfInt\\",
					\\"type\\": \\"[Int]\\",
					\\"defaultValue\\": [
						1,
						2,
						3
					]
				},
				{
					\\"name\\": \\"listOfEnums\\",
					\\"type\\": \\"[Episode]\\",
					\\"defaultValue\\": [
						\\"JEDI\\",
						\\"EMPIRE\\"
					]
				},
				{
					\\"name\\": \\"listOfCustomScalar\\",
					\\"type\\": \\"[Date]\\",
					\\"defaultValue\\": [
						\\"2017-04-16\\",
						\\"2017-04-17\\",
						\\"2017-04-18\\"
					]
				}
			]
		},
		{
			\\"kind\\": \\"ScalarType\\",
			\\"name\\": \\"Date\\"
		},
		{
			\\"kind\\": \\"EnumType\\",
			\\"name\\": \\"Episode\\",
			\\"values\\": [
				{
					\\"name\\": \\"NEWHOPE\\",
					\\"isDeprecated\\": false
				},
				{
					\\"name\\": \\"EMPIRE\\",
					\\"isDeprecated\\": false
				},
				{
					\\"name\\": \\"JEDI\\",
					\\"isDeprecated\\": false
				}
			]
		}
	]
}"
`;
